bisonc++ (5.00.01)

  * Fixed verbinsert calls: yodl 3.07.01 implements a macro 'verbinsert'
    rendering bisonc++'s own definition superfluous. The new definition
    requires 1 argument, and the old one 2, so the verbinsert calls were
    updated accordingly.

  * Alexander Sedov noticed that line numbers in the default actions were
    incorrect. Line numbers of default actions are now set to the line of the
    '|' or ';' character following the production rule receiving a default
    action block.

  * Updated the 'required' file.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 25 Apr 2016 15:47:27 +0530

bisonc++ (5.00.00)

  * Options/directives:

    The default `default-actions std' option/directive unconditionally adds $$
    = $1 action blocks to non-empty production rules w/o final action blocks

    Added option/directive tag-mismatches. and option
    --polymorphic-code-skeleton (-L).

    The formerly available option --no-default-action-return was renamed to
    default-actions (-d replacing -N), and can now also be used as a
    directive: %default-actions.  

    Option --polymorphic-inline-skeleton (-m) is not used anymore and was
    removed.

    The option --include-only has been dropped (although it was mentioned in
    the usage info, it had in fact not been available for quite some time).


  * Implementation:

    Reimplemented handling polymorphic semantic values. shared pointers are no
    longer used. Details: see README.polymorphic-technical and parser/data.cc

    Type specifications in %type directives are verified. With %union the
    check is a simple check whether '\btype\b' is found in the %union spec.

    Mismatches between the types of nonterminals and the types of the first
    elements of their production rules previously resulted in a `type clash of
    default action' warning. Such mismatches are now considered errors.

    After parsing a grammar file only plain warning messages (i.e., without