@@ -1,2 +1,2 @@
-#define VERSION "5.00.01"
+#define VERSION "5.00.02"
 #define YEARS   "2005-2016"
